Fixed layout for tablet on mobile platform on home page.

--- a/Source/Mobile/src/app/pages/users/home/home.page.scss
+++ b/Source/Mobile/src/app/pages/users/home/home.page.scss
@@ -115,7 +115,7 @@ ion-thumbnail {
             margin-bottom: 10px;
 
             .back_image{
-                height: 140px;
+                height: 35vw;
                 width: 100%;
                 background-position: center;
                 background-repeat: no-repeat;
@@ -346,7 +346,7 @@ ion-thumbnail {
                 height: 12px;
             }
             .image_div{
-                height: 125px;
+                height: 35vw;
                 width: auto;
                 background-position: center;
                 background-repeat: no-repeat;
